# sol-crud-examples

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: instruction.rs  lib.rs
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs
