[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
# programとバージョンを合わせる
clap = { version = "4.4.6", features = ["derive"] }
client = { path = "../client" }
serde = '1.0.188'
serde_json = "1.0.107"
serde_yaml = "0.9.25"
solana-sdk = "1.16.13"
tokio = { version = "1.32.0", features = ["full"]}