[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
# programとバージョンを合わせる
borsh = "0.10.3"
program = { path = "../program" }
serde = '1.0.188'
serde_json = "1.0.107"
solana-client = "1.16.13"
solana-sdk = "1.16.13"
solana-transaction-status = "1.16.13"
