[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "program"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.75"
# solana-programとバージョンを合わせる
borsh = "0.10.3"
num-derive = "0.4.0"
num-traits = "0.2.16"
solana-program = "1.16.13"
thiserror = "1.0.48"